--- a/part7/bloglist-react-router/server/package.json
+++ b/part7/bloglist-react-router/server/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.js",
-        "test": "jest --runInBand"
+        "start": "NODE_ENV=production node index.js",
+        "dev": "NODE_ENV=development nodemon index.js",
+        "test": "jest --runInBand",
+        "start:test": "NODE_ENV=test node index.js"
     },
     "author": "",
     "license": "ISC",
