--- a/part7/bloglist-react-router/server/package.json
+++ b/part7/bloglist-react-router/server/package.json
@@ -1,29 +1,39 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
+    "name": "meimuri-blog",
+    "version": "0.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "NODE_ENV=production node index.js",
-        "dev": "NODE_ENV=development nodemon index.js",
-        "test": "jest --runInBand",
+        "start": "cross-env NODE_ENV=production node index.js",
+        "dev": "cross-env NODE_ENV=development nodemon index.js",
+        "build:ui": "rm -rf dist && cd ../bloglist-frontend/ && npm run build && cp -r dist ../bloglist-backend",
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
         "start:test": "NODE_ENV=test node index.js"
     },
-    "author": "",
-    "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Meimuri/full-stack-open-exercises-part4.git"
+    },
+    "author": "Michael Alcaraz II",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Meimuri/full-stack-open-exercises-part4/issues"
+    },
+    "homepage": "https://github.com/Meimuri/full-stack-open-exercises-part4#readme",
     "dependencies": {
-        "bcrypt": "^5.1.0",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
-        "jsonwebtoken": "^9.0.0",
+        "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
-        "mongoose": "^6.8.4",
-        "mongoose-unique-validator": "^3.1.0"
+        "mongoose": "^7.6.3",
+        "mongoose-unique-validator": "^4.0.0"
     },
     "devDependencies": {
-        "jest": "^29.3.1",
+        "jest": "^29.7.0",
         "nodemon": "^3.0.1",
         "supertest": "^6.3.3"
     },
