--- a/part7/bloglist-react-router/client/package.json
+++ b/part7/bloglist-react-router/client/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-react-refresh": "^0.4.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "prettier": "3.1.0",
         "vite": "^4.4.5"
     }
 }
