--- a/part7/bloglist-react-router/client/package.json
+++ b/part7/bloglist-react-router/client/package.json
@@ -15,10 +15,14 @@
         "testEnvironment": "jsdom"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.7",
         "axios": "^1.4.0",
+        "final-form": "^4.20.10",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-final-form": "^6.5.9",
+        "react-redux": "^8.1.3"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.2",
