--- a/part7/bloglist-react-router/client/package.json
+++ b/part7/bloglist-react-router/client/package.json
@@ -22,7 +22,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-final-form": "^6.5.9",
-        "react-redux": "^8.1.3"
+        "react-redux": "^8.1.3",
+        "react-router-dom": "^6.20.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.2",
