--- a/part7/bloglist-react-router/client/package.json
+++ b/part7/bloglist-react-router/client/package.json
@@ -15,7 +15,10 @@
         "testEnvironment": "jsdom"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.17",
+        "@heroicons/react": "^2.0.18",
         "@reduxjs/toolkit": "^1.9.7",
+        "@tailwindcss/forms": "^0.5.7",
         "axios": "^1.4.0",
         "final-form": "^4.20.10",
         "prop-types": "^15.8.1",
@@ -34,6 +37,7 @@
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.16",
         "cypress": "^13.4.0",
         "eslint": "^8.45.0",
         "eslint-plugin-cypress": "^2.15.1",
@@ -43,7 +47,9 @@
         "eslint-plugin-react-refresh": "^0.4.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8.4.31",
         "prettier": "3.1.0",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.4.5"
     }
 }
