--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "library-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "graphql": "^16.8.1",
-    "uuid": "^9.0.1"
-  }
+    "name": "library-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@apollo/server": "^4.9.5",
+        "graphql": "^16.8.1",
+        "nodemon": "^3.0.1",
+        "uuid": "^9.0.1"
+    }
 }
