--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,8 +10,12 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.9.5",
+        "dotenv": "^16.3.1",
         "graphql": "^16.8.1",
-        "nodemon": "^3.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.6.3",
+        "mongoose-unique-validator": "^4.0.0",
+        "nodemon": "^3.0.2",
         "uuid": "^9.0.1"
     }
 }
