--- a/part8/library-backend/.env
+++ b/part8/library-backend/.env
@@ -3,4 +3,4 @@ PORT=3001
 
 TEST_MONGODB_URI=mongodb+srv://michaelalcaraz:Qweasd12@cluster0.w51nakq.mongodb.net/libraryApp?retryWrites=true&w=majority
 
-JWT_SECRET=password
+JWT_SECRET=secret
