--- a/part9/exercises 9.1 to 9.7/package.json
+++ b/part9/exercises 9.1 to 9.7/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "ts-node": "ts-node",
-        "calculate-bmi": "ts-node bmiCalculator.ts"
+        "calculate-bmi": "ts-node bmiCalculator.ts",
+        "calculate-exercises": "ts-node exerciseCalculator.ts"
     },
     "author": "",
     "license": "ISC",
