--- a/part9/exercises 9.1 to 9.7/package.json
+++ b/part9/exercises 9.1 to 9.7/package.json
@@ -6,12 +6,19 @@
     "scripts": {
         "ts-node": "ts-node",
         "calculate-bmi": "ts-node bmiCalculator.ts",
-        "calculate-exercises": "ts-node exerciseCalculator.ts"
+        "calculate-exercises": "ts-node exerciseCalculator.ts",
+        "start": "ts-node index.ts",
+        "dev": "ts-node-dev index.ts"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.21",
         "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "express": "^4.18.2"
     }
 }
