Add solution for exercise 9.5

--- a/part9/exercises 9.1 to 9.7/package.json
+++ b/part9/exercises 9.1 to 9.7/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "ts-node": "ts-node",
-        "calculate-bmi": "ts-node bmiCalculator.ts",
+        "calculate-bmi": "ts-node examples/bmiCalculator.ts",
         "calculate-exercises": "ts-node exerciseCalculator.ts",
         "start": "ts-node index.ts",
         "dev": "ts-node-dev index.ts"
