--- a/part12/containers-and-applications/todo-app/todo-backend/package.json
+++ b/part12/containers-and-applications/todo-app/todo-backend/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "mongoose": "^5.13.2",
     "morgan": "~1.9.1",
     "redis": "^3.1.2"
