--- a/part12/containers-and-applications/todo-app/todo-backend/docker-compose.dev.yml
+++ b/part12/containers-and-applications/todo-app/todo-backend/docker-compose.dev.yml
@@ -11,10 +11,15 @@ services:
             MONGO_INITDB_DATABASE: the_database
         volumes:
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-            - mongo_data:/data/db
+            - ./mongo_data:/data/db
     redis:
         image: redis
         ports:
             - 6379:6379
+        command: ["redis-server", "--appendonly", "yes"] # Overwrite the CMD
+        volumes: # Declare the volume
+            - ./redis_data:/data
+
 volumes:
     mongo_data:
+    redis_data:
