--- a/part12/containers-and-applications/todo-app/todo-backend/docker-compose-dev.yml
+++ b/part12/containers-and-applications/todo-app/todo-backend/docker-compose-dev.yml
@@ -1,6 +1,20 @@
 version: "3.8"
 
 services:
+    server:
+        image: todo-backend-dev
+        build:
+            context: .
+            dockerfile: dev.Dockerfile
+        volumes:
+            - ./:/usr/src/app
+        ports:
+            - 3000:3000
+        environment:
+            - REDIS_URL=redis://redis:6379
+            - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+        container_name: todo-backend-dev
+
     mongo:
         image: mongo
         ports:
@@ -12,14 +26,18 @@ services:
         volumes:
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
             - ./mongo_data:/data/db
+        container_name: mongo
+
     redis:
         image: redis
         ports:
             - 6379:6379
         command: ["redis-server", "--appendonly", "yes"] # Overwrite the CMD
-        volumes: # Declare the volume
+        volumes:
             - ./redis_data:/data
+        container_name: redis
 
 volumes:
     mongo_data:
     redis_data:
+# Run: docker compose -f docker-compose-dev.yml up
