--- a/part12/containers-and-applications/todo-app/docker-compose.yml
+++ b/part12/containers-and-applications/todo-app/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
     app:
-        image: todo-frontend-dev
+        image: todo-frontend
         build:
             context: ./todo-frontend # The context will pick this directory as the "build context"
-            dockerfile: dev.Dockerfile # This will simply tell which dockerfile to read
+            dockerfile: Dockerfile # This will simply tell which dockerfile to read
         volumes:
             - ./todo-frontend:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
         environment:
@@ -11,13 +11,13 @@ services:
             - PORT=3000
             - WDS_SOCKET_PORT=0
             - WATCHPACK_POLLING=true
-        container_name: todo-frontend-dev
+        container_name: todo-frontend
 
     server:
-        image: todo-backend-dev
+        image: todo-backend
         build:
             context: ./todo-backend
-            dockerfile: dev.Dockerfile
+            dockerfile: Dockerfile
         volumes:
             - ./todo-backend/:/usr/src/app
         environment:
@@ -26,7 +26,7 @@ services:
         depends_on:
             - mongo
             - redis
-        container_name: todo-backend-dev
+        container_name: todo-backend
 
     mongo:
         image: mongo
@@ -53,7 +53,7 @@ services:
     nginx:
         image: nginx:1.20.1
         volumes:
-            - ./nginx.dev.conf:/etc/nginx/nginx.dev.conf:ro
+            - ./nginx.conf:/etc/nginx/nginx.conf:ro
         ports:
             - 8080:80
         container_name: reverse-proxy
