--- a/part13/server/package.json
+++ b/part13/server/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "blog-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "sequelize": "^6.35.2"
-  },
-  "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.0"
-  }
+    "name": "blog-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "pg": "^8.11.3",
+        "sequelize": "^6.35.2"
+    },
+    "devDependencies": {
+        "@flydotio/dockerfile": "^0.5.0",
+        "nodemon": "^3.0.2"
+    }
 }
