--- a/part13/server/package.json
+++ b/part13/server/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.3",
         "sequelize": "^6.35.2"
     },
