--- a/part13/server/package.json
+++ b/part13/server/package.json
@@ -15,7 +15,8 @@
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.3",
-        "sequelize": "^6.35.2"
+        "sequelize": "^6.35.2",
+        "umzug": "^3.5.0"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.5.0",
